--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
         env:
           RTH_API_KEY: ${{ secrets.RTH_API_KEY }}
         with:
-          site: "example"  # 修改 example 为您的网站名称
+          site: "larp37h6"  # 修改 example 为您的网站名称
           build: "build"  # 修改 build 为您的构建命令
           outdir: "dist"  # 修改 dist 为您的构建输出目录
